# hl-thorvg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.hxml  generate-hl-cpp.sh  haxelib.json  thorvg.hdll
generator/: Generator.hx
lib/thorvg/: thorvg.idl
src/: hl-thorvg.h  thorvg.cpp
tests/: Test.hx
thorvg/: Native.hx  thorvg.idl
